--- a/kafka-operator/templates/022-RoleBinding-strimzi-cluster-operator.yaml
+++ b/kafka-operator/templates/022-RoleBinding-strimzi-cluster-operator.yaml
@@ -1,8 +1,9 @@
-{{- if and .Values.rbac.create .Values.createGlobalResources -}}
+{{- if .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-  name: strimzi-cluster-operator
+  name: strimzi-cluster-operator-leader-election
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "strimzi.name" . }}
     chart: {{ template "strimzi.chart" . }}
@@ -15,6 +16,6 @@ subjects:
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
-  name: strimzi-cluster-operator-global
+  name: strimzi-cluster-operator-leader-election
   apiGroup: rbac.authorization.k8s.io
-{{- end -}}
+{{- end }}
