--- a/kafka-operator/crds/045-Crd-kafkamirrormaker.yaml
+++ b/kafka-operator/crds/045-Crd-kafkamirrormaker.yaml
@@ -146,12 +146,6 @@ spec:
                         enableMetrics:
                           type: boolean
                           description: Enable or disable OAuth metrics. Default value is `false`.
-                        httpRetries:
-                          type: integer
-                          description: "The maximum number of retries to attempt if an initial HTTP request fails. If not set, the default is to not attempt any retries."
-                        httpRetryPauseMs:
-                          type: integer
-                          description: "The pause to take before retrying a failed HTTP request. If not set, the default is to not pause at all but to immediately repeat a request."
                         maxTokenExpirySeconds:
                           type: integer
                           description: Set or limit time-to-live of the access tokens to the specified number of seconds. This should be set if the authorization server returns opaque tokens.
@@ -320,12 +314,6 @@ spec:
                         enableMetrics:
                           type: boolean
                           description: Enable or disable OAuth metrics. Default value is `false`.
-                        httpRetries:
-                          type: integer
-                          description: "The maximum number of retries to attempt if an initial HTTP request fails. If not set, the default is to not attempt any retries."
-                        httpRetryPauseMs:
-                          type: integer
-                          description: "The pause to take before retrying a failed HTTP request. If not set, the default is to not pause at all but to immediately repeat a request."
                         maxTokenExpirySeconds:
                           type: integer
                           description: Set or limit time-to-live of the access tokens to the specified number of seconds. This should be set if the authorization server returns opaque tokens.
@@ -423,13 +411,6 @@ spec:
                 resources:
                   type: object
                   properties:
-                    claims:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          name:
-                            type: string
                     limits:
                       x-kubernetes-preserve-unknown-fields: true
                       type: object
@@ -538,7 +519,7 @@ spec:
                       enum:
                         - jaeger
                         - opentelemetry
-                      description: "Type of the tracing used. Currently the only supported type is `opentelemetry` for OpenTelemetry tracing. As of Strimzi 0.37.0, `jaeger` type is not supported anymore and this option is ignored."
+                      description: Type of the tracing used. Currently the only supported types are `jaeger` for OpenTracing (Jaeger) tracing and `opentelemetry` for OpenTelemetry tracing. The OpenTracing (Jaeger) tracing is deprecated.
                   required:
                     - type
                   description: The configuration of tracing in Kafka MirrorMaker.
@@ -554,11 +535,11 @@ spec:
                             labels:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Labels added to the Kubernetes resource.
+                              description: "Labels added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                             annotations:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Annotations added to the Kubernetes resource.
+                              description: "Annotations added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                           description: Metadata applied to the resource.
                         deploymentStrategy:
                           type: string
@@ -576,11 +557,11 @@ spec:
                             labels:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Labels added to the Kubernetes resource.
+                              description: "Labels added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                             annotations:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Annotations added to the Kubernetes resource.
+                              description: "Annotations added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                           description: Metadata applied to the resource.
                         imagePullSecrets:
                           type: array
@@ -1031,11 +1012,11 @@ spec:
                             labels:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Labels added to the Kubernetes resource.
+                              description: "Labels added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                             annotations:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Annotations added to the Kubernetes resource.
+                              description: "Annotations added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                           description: Metadata to apply to the `PodDisruptionBudgetTemplate` resource.
                         maxUnavailable:
                           type: integer
@@ -1125,11 +1106,11 @@ spec:
                             labels:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Labels added to the Kubernetes resource.
+                              description: "Labels added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                             annotations:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Annotations added to the Kubernetes resource.
+                              description: "Annotations added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                           description: Metadata applied to the resource.
                       description: Template for the Kafka MirrorMaker service account.
                   description: "Template to specify how Kafka MirrorMaker resources, `Deployments` and `Pods`, are generated."
