--- a/kafka-operator/crds/046-Crd-kafkabridge.yaml
+++ b/kafka-operator/crds/046-Crd-kafkabridge.yaml
@@ -54,7 +54,7 @@ spec:
                 replicas:
                   type: integer
                   minimum: 0
-                  description: The number of pods in the `Deployment`.  Defaults to `1`.
+                  description: The number of pods in the `Deployment`.
                 image:
                   type: string
                   description: The docker image for the pods.
@@ -144,12 +144,6 @@ spec:
                     enableMetrics:
                       type: boolean
                       description: Enable or disable OAuth metrics. Default value is `false`.
-                    httpRetries:
-                      type: integer
-                      description: "The maximum number of retries to attempt if an initial HTTP request fails. If not set, the default is to not attempt any retries."
-                    httpRetryPauseMs:
-                      type: integer
-                      description: "The pause to take before retrying a failed HTTP request. If not set, the default is to not pause at all but to immediately repeat a request."
                     maxTokenExpirySeconds:
                       type: integer
                       description: Set or limit time-to-live of the access tokens to the specified number of seconds. This should be set if the authorization server returns opaque tokens.
@@ -270,13 +264,6 @@ spec:
                 resources:
                   type: object
                   properties:
-                    claims:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          name:
-                            type: string
                     limits:
                       x-kubernetes-preserve-unknown-fields: true
                       type: object
@@ -354,7 +341,7 @@ spec:
                     topologyKey:
                       type: string
                       example: topology.kubernetes.io/zone
-                      description: "A key that matches labels assigned to the Kubernetes cluster nodes. The value of the label is used to set a broker's `broker.rack` config, and the `client.rack` config for Kafka Connect or MirrorMaker 2."
+                      description: "A key that matches labels assigned to the Kubernetes cluster nodes. The value of the label is used to set a broker's `broker.rack` config, and the `client.rack` config for Kafka Connect or MirrorMaker 2.0."
                   required:
                     - topologyKey
                   description: Configuration of the node label which will be used as the client.rack consumer configuration.
@@ -421,11 +408,11 @@ spec:
                             labels:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Labels added to the Kubernetes resource.
+                              description: "Labels added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                             annotations:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Annotations added to the Kubernetes resource.
+                              description: "Annotations added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                           description: Metadata applied to the resource.
                         deploymentStrategy:
                           type: string
@@ -443,11 +430,11 @@ spec:
                             labels:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Labels added to the Kubernetes resource.
+                              description: "Labels added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                             annotations:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Annotations added to the Kubernetes resource.
+                              description: "Annotations added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                           description: Metadata applied to the resource.
                         imagePullSecrets:
                           type: array
@@ -898,11 +885,11 @@ spec:
                             labels:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Labels added to the Kubernetes resource.
+                              description: "Labels added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                             annotations:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Annotations added to the Kubernetes resource.
+                              description: "Annotations added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                           description: Metadata applied to the resource.
                         ipFamilyPolicy:
                           type: string
@@ -910,7 +897,7 @@ spec:
                             - SingleStack
                             - PreferDualStack
                             - RequireDualStack
-                          description: "Specifies the IP Family Policy used by the service. Available options are `SingleStack`, `PreferDualStack` and `RequireDualStack`. `SingleStack` is for a single IP family. `PreferDualStack` is for two IP families on dual-stack configured clusters or a single IP family on single-stack clusters. `RequireDualStack` fails unless there are two IP families on dual-stack configured clusters. If unspecified, Kubernetes will choose the default value based on the service type."
+                          description: "Specifies the IP Family Policy used by the service. Available options are `SingleStack`, `PreferDualStack` and `RequireDualStack`. `SingleStack` is for a single IP family. `PreferDualStack` is for two IP families on dual-stack configured clusters or a single IP family on single-stack clusters. `RequireDualStack` fails unless there are two IP families on dual-stack configured clusters. If unspecified, Kubernetes will choose the default value based on the service type. Available on Kubernetes 1.20 and newer."
                         ipFamilies:
                           type: array
                           items:
@@ -918,7 +905,7 @@ spec:
                             enum:
                               - IPv4
                               - IPv6
-                          description: "Specifies the IP Families used by the service. Available options are `IPv4` and `IPv6`. If unspecified, Kubernetes will choose the default value based on the `ipFamilyPolicy` setting."
+                          description: "Specifies the IP Families used by the service. Available options are `IPv4` and `IPv6. If unspecified, Kubernetes will choose the default value based on the `ipFamilyPolicy` setting. Available on Kubernetes 1.20 and newer."
                       description: Template for Kafka Bridge API `Service`.
                     podDisruptionBudget:
                       type: object
@@ -929,11 +916,11 @@ spec:
                             labels:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Labels added to the Kubernetes resource.
+                              description: "Labels added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                             annotations:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Annotations added to the Kubernetes resource.
+                              description: "Annotations added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                           description: Metadata to apply to the `PodDisruptionBudgetTemplate` resource.
                         maxUnavailable:
                           type: integer
@@ -1023,11 +1010,11 @@ spec:
                             labels:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Labels added to the Kubernetes resource.
+                              description: "Labels added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                             annotations:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Annotations added to the Kubernetes resource.
+                              description: "Annotations added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                           description: Metadata applied to the resource.
                       description: Template for the Kafka Bridge ClusterRoleBinding.
                     serviceAccount:
@@ -1039,11 +1026,11 @@ spec:
                             labels:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Labels added to the Kubernetes resource.
+                              description: "Labels added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                             annotations:
                               x-kubernetes-preserve-unknown-fields: true
                               type: object
-                              description: Annotations added to the Kubernetes resource.
+                              description: "Annotations added to the resource template. Can be applied to different resources such as `StatefulSets`, `Deployments`, `Pods`, and `Services`."
                           description: Metadata applied to the resource.
                       description: Template for the Kafka Bridge service account.
                     initContainer:
@@ -1129,7 +1116,7 @@ spec:
                       enum:
                         - jaeger
                         - opentelemetry
-                      description: "Type of the tracing used. Currently the only supported type is `opentelemetry` for OpenTelemetry tracing. As of Strimzi 0.37.0, `jaeger` type is not supported anymore and this option is ignored."
+                      description: Type of the tracing used. Currently the only supported types are `jaeger` for OpenTracing (Jaeger) tracing and `opentelemetry` for OpenTelemetry tracing. The OpenTracing (Jaeger) tracing is deprecated.
                   required:
                     - type
                   description: The configuration of tracing in Kafka Bridge.
