--- a/kafka-operator/templates/060-Deployment-strimzi-cluster-operator.yaml
+++ b/kafka-operator/templates/060-Deployment-strimzi-cluster-operator.yaml
@@ -29,15 +29,9 @@ spec:
       {{- end }}
     spec:
       serviceAccountName: {{ .Values.serviceAccount }}
-      {{- /* imagePullSecrets is allowed to be for backwards compatibility */ -}}
-      {{- if kindIs "string" .Values.image.imagePullSecrets }}
+      {{- if .Values.image.imagePullSecrets }}
       imagePullSecrets:
         - name: {{ .Values.image.imagePullSecrets }}
-      {{- else if kindIs "slice" .Values.image.imagePullSecrets }}
-      imagePullSecrets:
-        {{- with .Values.image.imagePullSecrets }}
-        {{- toYaml . | nindent 8 }}
-        {{- end }}
       {{- end }}
       {{- with .Values.podSecurityContext }}
       securityContext: {{ toYaml . | nindent 8 }}
@@ -55,7 +49,7 @@ spec:
             name: {{ .Values.logConfigMap }}
       containers:
         - name: strimzi-cluster-operator
-          image: {{ template "strimzi.image" (set . "key" "") }}
+          image: {{ default .Values.defaultImageRegistry .Values.image.registry }}/{{ default .Values.defaultImageRepository .Values.image.repository}}/{{ .Values.image.name }}:{{ default .Values.defaultImageTag .Values.image.tag }}
           ports:
             - containerPort: 8080
               name: http
@@ -90,28 +84,26 @@ spec:
               value: {{ .Values.operationTimeoutMs | quote }}
             {{- template "strimzi.kafka.image.map" . }}
             - name: STRIMZI_DEFAULT_TOPIC_OPERATOR_IMAGE
-              value: {{ template "strimzi.image" (set . "key" "topicOperator") }}
+              value: {{ default .Values.defaultImageRegistry  .Values.topicOperator.image.registry }}/{{ default .Values.defaultImageRepository .Values.topicOperator.image.repository }}/{{ .Values.topicOperator.image.name }}:{{ default  .Values.defaultImageTag .Values.topicOperator.image.tag }}
             - name: STRIMZI_DEFAULT_USER_OPERATOR_IMAGE
-              value: {{ template "strimzi.image" (set . "key" "userOperator") }}
+              value: {{ default .Values.defaultImageRegistry  .Values.userOperator.image.registry }}/{{ default .Values.defaultImageRepository .Values.userOperator.image.repository }}/{{ .Values.userOperator.image.name }}:{{ default .Values.defaultImageTag .Values.userOperator.image.tag }}
             - name: STRIMZI_DEFAULT_KAFKA_INIT_IMAGE
-              value: {{ template "strimzi.image" (set . "key" "kafkaInit") }}
+              value: {{ default .Values.defaultImageRegistry  .Values.kafkaInit.image.registry }}/{{ default .Values.defaultImageRepository .Values.kafkaInit.image.repository }}/{{ .Values.kafkaInit.image.name }}:{{ default .Values.defaultImageTag .Values.kafkaInit.image.tag }}
             - name: STRIMZI_DEFAULT_KAFKA_BRIDGE_IMAGE
-              value: {{ template "strimzi.image" (set . "key" "kafkaBridge") }}
+              value: {{ default .Values.defaultImageRegistry  .Values.kafkaBridge.image.registry }}/{{ default .Values.defaultImageRepository .Values.kafkaBridge.image.repository }}/{{ .Values.kafkaBridge.image.name }}:{{ default .Values.defaultImageTag .Values.kafkaBridge.image.tag }}
+            - name: STRIMZI_DEFAULT_JMXTRANS_IMAGE
+              value: {{ default .Values.defaultImageRegistry  .Values.jmxTrans.image.registry }}/{{ default .Values.defaultImageRepository .Values.jmxTrans.image.repository }}/{{ .Values.jmxTrans.image.name }}:{{ default .Values.defaultImageTag .Values.jmxTrans.image.tag }}
             - name: STRIMZI_DEFAULT_KANIKO_EXECUTOR_IMAGE
-              value: {{ template "strimzi.image" (set . "key" "kanikoExecutor") }}
+              value: {{ default .Values.defaultImageRegistry  .Values.kanikoExecutor.image.registry }}/{{ default .Values.defaultImageRepository .Values.kanikoExecutor.image.repository }}/{{ .Values.kanikoExecutor.image.name }}:{{ default .Values.defaultImageTag .Values.kanikoExecutor.image.tag }}
             - name: STRIMZI_DEFAULT_MAVEN_BUILDER
-              value: {{ template "strimzi.image" (set . "key" "mavenBuilder") }}
+              value: {{ default .Values.defaultImageRegistry  .Values.mavenBuilder.image.registry }}/{{ default .Values.defaultImageRepository .Values.mavenBuilder.image.repository }}/{{ .Values.mavenBuilder.image.name }}:{{ default .Values.defaultImageTag .Values.mavenBuilder.image.tag }}
             - name: STRIMZI_OPERATOR_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
-            {{- /* imagePullSecrets is allowed to be for backwards compatibility */ -}}
-            {{- if kindIs "string" .Values.image.imagePullSecrets }}
+            {{- if .Values.image.imagePullSecrets }}
             - name: STRIMZI_IMAGE_PULL_SECRETS
               value: {{ .Values.image.imagePullSecrets }}
-            {{- else if kindIs "slice" .Values.image.imagePullSecrets }}
-            - name: STRIMZI_IMAGE_PULL_SECRETS
-              value: {{ template "strimzi.listPluck" (dict "list" .Values.image.imagePullSecrets "key" "name") }}
             {{- end }}
             {{- if .Values.image.operatorNamespaceLabels }}
             - name: STRIMZI_OPERATOR_NAMESPACE_LABELS
@@ -141,11 +133,7 @@ spec:
 {{ toYaml .Values.extraEnvs | indent 12 }}
             {{- end }}
             - name: STRIMZI_LEADER_ELECTION_ENABLED
-              {{- if .Values.leaderElection.enable }}
               value: "true"
-              {{- else }}
-              value: "false"
-              {{- end }}
             - name: STRIMZI_LEADER_ELECTION_LEASE_NAME
               value: "strimzi-cluster-operator"
             - name: STRIMZI_LEADER_ELECTION_LEASE_NAMESPACE
