--- a/kafka-operator/values.yaml
+++ b/kafka-operator/values.yaml
@@ -17,8 +17,6 @@ image:
   repository: ""
   name: operator
   tag: ""
-  # imagePullSecrets:
-  #   - name: secretname
 logVolume: co-config-volume
 logConfigMap: strimzi-cluster-operator
 logConfiguration: ""
@@ -49,19 +47,6 @@ rbac:
   create: yes
 serviceAccountCreate: yes
 serviceAccount: strimzi-cluster-operator
-
-leaderElection:
-  enable: true
-
-# If you are using the grafana dashboard sidecar,
-# you can import some default dashboards here
-dashboards:
-  enabled: false
-  namespace: ~
-  label: grafana_dashboard # this is the default value from the grafana chart
-  labelValue: "1" # this is the default value from the grafana chart
-  annotations: {}
-  extraLabels: {}
 
 # Docker images that operator uses to provision various components of Strimzi. To use your own registry prefix the
 # repository name with your registry URL.
@@ -113,13 +98,19 @@ kafkaBridge:
     registry: ""
     repository:
     name: kafka-bridge
-    tag: 0.26.1
+    tag: 0.24.0
 kafkaExporter:
   image:
     registry: ""
     repository: ""
     name: kafka
     tagPrefix: ""
+jmxTrans:
+  image:
+    registry: ""
+    repository: ""
+    name: jmxtrans
+    tag: ""
 kafkaMirrorMaker2:
   image:
     registry: ""
