--- a/kafka-operator/values.yaml
+++ b/kafka-operator/values.yaml
@@ -1,3 +1,7 @@
+global:
+  imageRegistry: docker.io
+  imagePullSecrets: [ ]
+
 # Default values for strimzi-kafka-operator.
 
 # Default replicas for the cluster operator
