Feature: revise image pull policy

--- a/kafka-operator/values.yaml
+++ b/kafka-operator/values.yaml
@@ -21,6 +21,7 @@ image:
   repository: ""
   name: kafka-operator
   tag: ""
+  imagePullPolicy: Always
 logVolume: co-config-volume
 logConfigMap: strimzi-cluster-operator
 logConfiguration: ""
