--- a/kafka-operator/templates/090-PodMonitor.yaml
+++ b/kafka-operator/templates/090-PodMonitor.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
   name: kafka-resources-metric
-  namespace: extension-dmp
+  namespace: {{ .Release.Namespace }}
   labels:
     app: strimzi
     component: podmonitor
